index title alter

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends ./layout
 
 block body
-    h1 Hello world!
+    h1 Hello world, you filthy animals!
     p This is coming from the <code>views/index.pug</code> file.
 
     form(method="POST")
